# phaserjs-rust-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.kiro/specs/phaser-rust-engine/: design.md  requirements.md  tasks.md
crates/phaser_ai/: Cargo.toml
crates/phaser_ai/src/: lib.rs
crates/phaser_animations/: Cargo.toml
crates/phaser_animations/src/: lib.rs
crates/phaser_audio/: Cargo.toml
crates/phaser_audio/src/: lib.rs
crates/phaser_cameras/: Cargo.toml
crates/phaser_cameras/src/: lib.rs
crates/phaser_core/: Cargo.toml
crates/phaser_core/src/: canvas.rs  config.rs  error.rs  events.rs  game.rs  game_loop.rs  lib.rs  scene.rs  scene_manager.rs
crates/phaser_core/tests/: property_tests.rs
crates/phaser_gameobjects/: Cargo.toml
crates/phaser_gameobjects/src/: lib.rs
crates/phaser_input/: Cargo.toml
crates/phaser_input/src/: lib.rs
crates/phaser_loader/: Cargo.toml
crates/phaser_loader/src/: lib.rs
crates/phaser_math/: Cargo.toml
crates/phaser_math/src/: geom.rs  lib.rs  matrix.rs  utils.rs  vector.rs
crates/phaser_math/tests/: property_tests.rs
crates/phaser_particles/: Cargo.toml
crates/phaser_particles/src/: lib.rs
crates/phaser_physics/: Cargo.toml
crates/phaser_physics/src/: lib.rs
crates/phaser_renderer/: Cargo.toml
crates/phaser_renderer/src/: lib.rs
crates/phaser_tilemaps/: Cargo.toml
crates/phaser_tilemaps/src/: lib.rs
crates/phaser_tweens/: Cargo.toml
crates/phaser_tweens/src/: lib.rs
