[package]
name = "phaser_ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phaser_core = { path = "../phaser_core" }
phaser_math = { path = "../phaser_math" }
ndarray.workspace = true
ort.workspace = true
reqwest.workspace = true
tokio.workspace = true
